POJO are added to the project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+####################################### TECHNICAL CONFIGURATION ################################
+
+
+
+
+####################################### BUSINESS CONFIGURATION ################################
+business.config.bankName=Koti Karanki's Digital Bank
+business.config.bankRegNo=KKDB007
+business.config.bankAddress=#007, James Bond Street, The Spy Who loved Me Down Town, Hyderabad, India - 500 086
